objects/Existing_Sub_Pricing_Data__mdt.object
<CustomObject>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Guidanz_bundle_DN_Price__c</fullName>
        <label>Guidanz bundle DN Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guidanz_bundle_Dealer_Price__c</fullName>
        <label>Guidanz bundle Dealer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INSITE_DN_Price__c</fullName>
        <label>INSITE DN Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INSITE_Dealer_Price__c</fullName>
        <label>INSITE Dealer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_INSITE_DN_Price__c</fullName>
        <label>Lifetime INSITE DN Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_INSITE_Dealer_Price__c</fullName>
        <label>Lifetime INSITE Dealer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_QSOL_DN_Price__c</fullName>
        <label>Lifetime QSOL DN Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_QSOL_Dealer_Price__c</fullName>
        <label>Lifetime QSOL Dealer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QSOL_DN_Price__c</fullName>
        <label>QSOL Dealer DN Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QSOL_Dealer_Price__c</fullName>
        <label>QSOL Dealer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QSOL_Distributor_DN_Price__c</fullName>
        <label>QSOL_Distributor_DN_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Existing Sub Pricing Data</label>
    <pluralLabel>Existing Sub Pricing Datas</pluralLabel>
</CustomObject>